--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
     // we use 2 spaces to indent our code
     "indent": ["error", 2],
     // we want to avoid extraneous spaces
-    "no-multi-spaces": ["error"]
+    "no-multi-spaces": ["error"],
+    "object-curly-spacing": [2, "always"]
   }
 }
